--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=users
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5444/users
+spring.datasource.username=postgres
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+jwt.secret = "mySecretKey"
+
+users.url=http://localhost:8081/users
+hotels.url=http://localhost:8082/hotels
+restaurants.url=http://localhost:8083/restaurants
+payments.url=http://localhost:8084/payments
+discounts.url=http://localhost:8085/discounts
+
+springdoc.api-docs.path=/api-docs
+
